# motivate_me

./: .env-example  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
backend/: .gitignore  app.py
backend/src/: utils.py
backend/src/agents/: find_applications.py
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json
frontend/src/components/: ChatInterface.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  ResponseRenderer.tsx
frontend/src/components/responses/: ApplicationsResponse.tsx  ConceptsResponse.tsx  RoadmapResponse.tsx  TextResponse.tsx  TextWithImagesResponse.tsx
frontend/src/pages/: Index.tsx
frontend/src/services/: apiService.ts
frontend/src/types/: chat.ts
src/: api.py  config.py  data_models.py  utils.py
src/agents/: agent_data_sender.py  extract_concepts.py  find_applications.py  orchestrator.py  roadmap_agent.py
tests/: testing_google_image_fetch.ipynb
tmp/: workflow_state.json
