[project]
name = "motivate-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-mistralai>=0.2.10",
    "langgraph>=0.4.7",
    "mistralai>=1.7.1",
    "pdf2image>=1.17.0",
]
